test/files/neg/t6680c.check
t6680c.scala:15: error: type mismatch;
 found   : String("a string!")
 required: S
    res match { case Unfold(s, f) => f("a string!") }
                                       ^
one error found
